--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>Appointment Management App</title>
-    <link rel="icon" type="image/x-icon" href="images/appointment.png" />
+    <link rel="icon" type="image/x-icon" href="css/style.css" />
     <!-- Javascript file-->
     <!-- <script defer src="script.js"></script> -->
   </head>
